# WorkshopExamples

diesel_and_ps_example/: .gitignore  Cargo.toml  setup_diesel.ps1
diesel_and_ps_example/src/: main.rs  models.rs
introduction_to_rust/: Cargo.toml
introduction_to_rust/borrow_checker_introduction/: Cargo.toml
introduction_to_rust/borrow_checker_introduction/src/: main.rs
introduction_to_rust/error_handling_introduction/: Cargo.toml
introduction_to_rust/error_handling_introduction/src/: main.rs
introduction_to_rust/function_introduction/: Cargo.toml
introduction_to_rust/function_introduction/src/: main.rs
introduction_to_rust/type_system_introduction/: Cargo.toml
introduction_to_rust/type_system_introduction/src/: main.rs
serenity_example/: Cargo.toml  set_env_vars.ps1  set_env_vars.sh
serenity_example/src/: main.rs
serenity_example/src/commands/: mod.rs
tokio_example/: Cargo.toml
