[package]
name = "tokio_example"
version = "0.1.0"
edition = "2021"

[["bin"]]
name = "echo"
path = "src/echo.rs"

[["bin"]]
name = "connect"
path = "src/connect.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7.0", features = ["full"] }
tokio-stream = { version = "0.1" }
futures = { version = "0.3.0", features = ["thread-pool"]}
bytes = "1.0.0"
